<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="3dp"
    app:cardCornerRadius="30dp"

    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="State Name"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"

            android:gravity="center_horizontal"
            android:id="@+id/stateName" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/Statecases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/StatenoOfCases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_cases"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/red"
                    android:padding="4dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/StateRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/StatenoOfRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_recovered"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/green"
                    android:padding="4dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/StatedeathsWorld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="@string/death"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/noOfDeathsworld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_deaths"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textColor="@color/blue"
                    android:padding="4dp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>